--- a/index.html
+++ b/index.html
@@ -5,6 +5,47 @@
   </head>
   <body>
     <div class="page-container">
+      <header>
+        <nav>
+          <ul>
+            <li>
+              <a href="#"><img src="" alt="Gllacy shop logo"></a>
+            </li>
+            <li>
+              <a href="#">Каталог</a>
+            </li>
+            <li>
+              <a href="#">Доставка и оплата</a>
+            </li>
+            <li>
+              <a href="#">О Компании</a>
+            </li>
+          </ul>
+        </nav>
+        <div class="header-buttons">
+          <div class="button-search">
+            <a></a>
+            <div class="popup">
+              <input type="search" name="q" id="site-search" placeholder="Что ищем?">
+            </div>  
+          </div>
+          <div class="button-enter">
+            <a>Вход</a>
+            <div class="popup">
+              <form action="" method="" id="sign-in">
+                <input type="email" id="user-login" name="login" placeholder="Электронная почта">
+                <input type="password" id="user-password" name="password" placeholder="Пароль">
+              </form>
+          </div>
+          <div class="button-cart">
+            <a class="basket">Пусто</a>
+          </div>
+        </div>
+      </header>
+      <main>
+      </main>
+      <footer>
+      </footer>
     </div>
   </body>
 </html>
