--- a/index.html
+++ b/index.html
@@ -43,6 +43,33 @@
         </div>
       </header>
       <main>
+        <section>
+          <div class="work-time">
+            <p class="shedule">с 10 до 20, ежедневно</p>
+          </div>
+          <div class="phone">
+            <a href="tel:88124502525" class="phone-link">8 812 450-25-25</a>
+          </div>
+          <div class="slider-container">
+            <div class="slide" id="slide-1">
+              <p class="slide-text">Крем-брюле и пломбир c малиновым джемом</p>
+              <a href="#" class="slide-button">Давайте две!</a>
+            </div>
+            <div class="slide" id="slide-2">
+              <p class="slide-text">Крем-брюле и пломбир c малиновым джемом</p>
+              <a href="#" class="slide-button">Давайте две!</a>
+            </div>
+            <div class="slide" id="slide-3">
+              <p class="slide-text">Крем-брюле и пломбир c малиновым джемом</p>
+              <a href="#" class="slide-button">Давайте две!</a>
+            </div>
+            <div class="slider-buttons">
+              <div class="button-slide-1"><a href="#"></a></div>
+              <div class="button-slide-2"><a href="#"></a></div>
+              <div class="button-slide-3"><a href="#"></a></div>
+            </div>
+          </div>
+        </section>
       </main>
       <footer>
       </footer>
