Add special offer section for future page
Also fix missprint in title.

Fixes #1

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang="ru">
   <head>
-    <title>Gllacy Shop | Глейси - магазин мороженного</title>
+    <title>Gllacy Shop | Глейси - магазин мороженого</title>
   </head>
   <body>
     <div class="page-container">
@@ -69,6 +69,18 @@
               <div class="button-slide-3"><a href="#"></a></div>
             </div>
           </div>
+        </section>
+        <section class="special-offer">
+          <article class="offer-item">
+            <h2>Малинки даром!</h2>
+            <p>При покупке 2кг любого фруктового мороженого, добавим в ваш заказ банку малинового варенья бесплатно.</p>
+            <a href="#" class="offer-button">Хочу варенье!</a>
+          </article>
+          <article class="offer-item">
+            <h2>Шоколадки даром!</h2>
+            <p>При покупке 2кг пломбира, добавим в ваш заказ упаковку вкуснейшей шоколадной присыпки совершенно бесплатно.</p>
+            <a href="#" class="offer-button">Хочу шоколадки!</a>
+          </article>
         </section>
       </main>
       <footer>
