Add price cards sections for future index page
Fixes #1

--- a/index.html
+++ b/index.html
@@ -82,6 +82,32 @@
             <a href="#" class="offer-button">Хочу шоколадки!</a>
           </article>
         </section>
+        <section class="container-prices">
+          <div class="price-card">
+            <img src="" alt="" class="price-img">
+            <p class="price">310<span class="symbol">P</span>/kr</p>
+            <p class="card-description">Сливочное с апельсиновым джемом и цитрусовой стружкой</p>
+            <a href="#" class="show-button">Быстрый просмотр</a>
+          </div>
+          <div class="price-card">
+            <img src="" alt="" class="price-img">
+            <p class="price">380<span class="symbol">P</span>/kr</p>
+            <p class="card-description">Сливочно-кофейное с кусочками шоколада</p>
+            <a href="#" class="show-button">Быстрый просмотр</a>
+          </div>
+          <div class="price-card">
+            <img src="" alt="" class="price-img">
+            <p class="price">355<span class="symbol">P</span>/kr</p>
+            <p class="card-description">Сливочно-клубничное с присыпкой из белого шоколада</p>
+            <a href="#" class="show-button">Быстрый просмотр</a>
+          </div>
+          <div class="price-card">
+            <img src="" alt="" class="price-img">
+            <p class="price">415<span class="symbol">P</span>/kr</p>
+            <p class="card-description">Сливочное крем-брюле с карамельной подливкой</p>
+            <a href="#" class="show-button">Быстрый просмотр</a>
+          </div>
+        </section>
       </main>
       <footer>
       </footer>
