Add shop description section for future index page
Also fix symbol of russian ruble.

Fixes #1

--- a/index.html
+++ b/index.html
@@ -85,28 +85,51 @@
         <section class="container-prices">
           <div class="price-card">
             <img src="" alt="" class="price-img">
-            <p class="price">310<span class="symbol">P</span>/kr</p>
+            <p class="price">310&#8381;/кг</p>
             <p class="card-description">Сливочное с апельсиновым джемом и цитрусовой стружкой</p>
             <a href="#" class="show-button">Быстрый просмотр</a>
           </div>
           <div class="price-card">
             <img src="" alt="" class="price-img">
-            <p class="price">380<span class="symbol">P</span>/kr</p>
+            <p class="price">380&#8381;/кг</p>
             <p class="card-description">Сливочно-кофейное с кусочками шоколада</p>
             <a href="#" class="show-button">Быстрый просмотр</a>
           </div>
           <div class="price-card">
             <img src="" alt="" class="price-img">
-            <p class="price">355<span class="symbol">P</span>/kr</p>
+            <p class="price">355&#8381;/кг</p>
             <p class="card-description">Сливочно-клубничное с присыпкой из белого шоколада</p>
             <a href="#" class="show-button">Быстрый просмотр</a>
           </div>
           <div class="price-card">
             <img src="" alt="" class="price-img">
-            <p class="price">415<span class="symbol">P</span>/kr</p>
+            <p class="price">415&#8381;/кг</p>
             <p class="card-description">Сливочное крем-брюле с карамельной подливкой</p>
             <a href="#" class="show-button">Быстрый просмотр</a>
           </div>
+        </section>
+        <section class="shop-description">
+          <article>
+            <h3>Maгазин Глэйси &mdash; это онлайн- и офлайн-магазин по продаже мороженного собственного производства на развес</h3>
+            <div class="description-container">
+              <div class="description-item">
+                <i class="item-icon"></i>
+                <p>Все наше мороженое изготавливается на собственном производстве, с использованием современного оборудования и проверенных временем технологий.</p>
+              </div>
+              <div class="description-item">
+                <i class="item-icon"></i>
+                <p>Для приготовления мороженого используются настоящие сливки и молоко высочайшего качества. Все дополнительные ингредиенты и добавки произведены из натурального, экологически чистого сырья.</p>
+              </div>
+              <div class="description-item">
+                <i class="item-icon"></i>
+                <p>Закупка ингредиентов производится только у проверенных фермерских хозяйств и компаний, с которыми нас связывает долговременное сотрудничество.</p>
+              </div>
+              <div class="description-item">
+                <i class="item-icon"></i>
+                <p>Доставка нашего мороженого до заказчиков осуществляется в специальном термопаке, который не дает мороженому растаять в пути и позволяет ему сохранить свой превосходный вкус.</p>             
+              </div>
+            </div>
+          </article>
         </section>
       </main>
       <footer>
