Add news section for future index page
Fixes #1

--- a/index.html
+++ b/index.html
@@ -131,6 +131,18 @@
             </div>
           </article>
         </section>
+        <section class="news-container">
+          <article class="news-post">
+            <h4>Новое в нашем блоге</h4>
+            <a>10 способов сервировки фруктовых щербетов к столу</a>
+          </article>
+          <div class="news-letter">
+            <p>Подпишитесь на нашу сладкую рассылку и будете всегда в курсе всего самого вкусного, что у нас происходит. Обещаем не спамить и не слать всякой не нужной ерунды. Честно =)</p>
+            <form action="" method="" id="news-letter">
+              <input type="email" name="letter-email" id="letter-email" placeholder="Электронная почта">
+              <button type="submit" class="submit-button">Отправить</button>
+          </div>
+        </section>
       </main>
       <footer>
       </footer>
