Add footer section for future index page
Fixes #1

--- a/index.html
+++ b/index.html
@@ -143,8 +143,36 @@
               <button type="submit" class="submit-button">Отправить</button>
           </div>
         </section>
+        <div class="map-container">
+        </div>
       </main>
       <footer>
+      <div class="social">
+        <a href="#" class="twitter">Твиттер</a>
+        <a href="#" class="instagram">Инстаграм</a>
+        <a href="#" class="facebook">Фейсбук</a>
+        <a href="#" class="vkontakt">Вконтакте</a>
+      </div>
+      <nav class="footer-nav">
+        <ul>
+          <li>
+            <a href="#" class="active">Для поставщиков</a>
+          </li>
+          <li>
+            <a href="#" class="active">О производстве</a>
+          </li>
+          <li>
+            <a href="#" class="active">Наши документы</a>
+          </li>
+          <li>
+            <a href="#" class="active">Экологические стандарты</a>
+          </li>
+        </ul>
+      </nav>
+      <div class="copyright">
+        <img src="" alt="html academy" class="html-logo">
+        <span>Сделано в <a rel="license" href="https://htmlacademy.ru/docs/license">HTML Academy</a> &copy; 2017</span>
+      </div>
       </footer>
     </div>
   </body>
