fix: Add class and inner text to link in header
Fixes #1

--- a/index.html
+++ b/index.html
@@ -24,13 +24,13 @@
         </nav>
         <div class="header-buttons">
           <div class="button-search">
-            <a></a>
+            <a href="#" class="search-icon">Поиск</a>
             <div class="popup">
               <input type="search" name="q" id="site-search" placeholder="Что ищем?">
             </div>  
           </div>
           <div class="button-enter">
-            <a>Вход</a>
+            <a href="#" class="enter-icon">Вход</a>
             <div class="popup">
               <form action="" method="" id="sign-in">
                 <input type="email" id="user-login" name="login" placeholder="Электронная почта">
@@ -38,7 +38,7 @@
               </form>
           </div>
           <div class="button-cart">
-            <a class="basket">Пусто</a>
+            <a href="#" class="basket">Пусто</a>
           </div>
         </div>
       </header>
