--- a/index.html
+++ b/index.html
@@ -46,11 +46,13 @@
     </header>
     <main>
       <section>
-        <div class="work-time">
-          <p class="shedule">с 10 до 20, ежедневно</p>
-        </div>
-        <div class="phone">
-          <a href="tel:88124502525" class="phone-link">8 812 450-25-25</a>
+        <div class="work-info">
+          <div class="work-time">
+            <p class="schedule">с 10 до 20, ежедневно</p>
+          </div>
+          <div class="phone">
+            <a href="tel:88124502525" class="phone-link">8 812 450-25-25</a>
+          </div>
         </div>
         <div class="slider-container">
           <div class="slide" id="slide-1">
