--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
 </head>
 
 <body>
+  <input class="button-slide" id="button-slide-1" type="radio" name="button-slide" checked>
+  <input class="button-slide" id="button-slide-2" type="radio" name="button-slide">
+  <input class="button-slide" id="button-slide-3" type="radio" name="button-slide">
   <div class="page-container">
     <header>
       <nav>
@@ -68,9 +71,9 @@
             <a href="#" class="slide-button">Давайте две!</a>
           </div>
           <div class="slider-buttons">
-            <div class="button-slide-1"><a href="#"></a></div>
-            <div class="button-slide-2"><a href="#"></a></div>
-            <div class="button-slide-3"><a href="#"></a></div>
+            <label for="button-slide-1"></label>
+            <label for="button-slide-2"></label>
+            <label for="button-slide-3"></label>
           </div>
         </div>
       </section>
