--- a/index.html
+++ b/index.html
@@ -10,184 +10,191 @@
   <input class="button-slide" id="button-slide-2" type="radio" name="button-slide">
   <input class="button-slide" id="button-slide-3" type="radio" name="button-slide">
   <div class="page-container">
-    <header>
-      <nav>
-        <ul>
-          <li>
-            <a href="#"><img src="" alt="Gllacy shop logo"></a>
-          </li>
-          <li>
-            <a href="#">Каталог</a>
-          </li>
-          <li>
-            <a href="#">Доставка и оплата</a>
-          </li>
-          <li>
-            <a href="#">О Компании</a>
-          </li>
-        </ul>
-      </nav>
-      <div class="header-buttons">
-        <div class="button-search">
-          <a href="#" class="search-icon">Поиск</a>
-          <div class="popup">
-            <input type="search" name="q" id="site-search" placeholder="Что ищем?">
-          </div>
-        </div>
-        <div class="button-enter">
-          <a href="#" class="enter-icon">Вход</a>
-          <div class="popup">
-            <form action="" method="" id="sign-in">
-              <input type="email" id="user-login" name="login" placeholder="Электронная почта">
-              <input type="password" id="user-password" name="password" placeholder="Пароль">
-            </form>
-          </div>
-          <div class="button-cart">
-            <a href="#" class="basket">Пусто</a>
-          </div>
-        </div>
-    </header>
-    <main>
-      <section>
-        <div class="work-info">
-          <div class="work-time">
-            <p class="schedule">с 10 до 20, ежедневно</p>
-          </div>
-          <div class="phone">
-            <a href="tel:88124502525" class="phone-link">8 812 450-25-25</a>
-          </div>
-        </div>
-        <div class="slider-container">
-          <div class="slide" id="slide-1">
-            <p class="slide-text">Крем-брюле и пломбир c малиновым джемом</p>
-            <a href="#" class="slide-button">Давайте две!</a>
-          </div>
-          <div class="slide" id="slide-2">
-            <p class="slide-text">Крем-брюле и пломбир c малиновым джемом</p>
-            <a href="#" class="slide-button">Давайте две!</a>
-          </div>
-          <div class="slide" id="slide-3">
-            <p class="slide-text">Крем-брюле и пломбир c малиновым джемом</p>
-            <a href="#" class="slide-button">Давайте две!</a>
-          </div>
-          <div class="slider-buttons">
-            <label for="button-slide-1"></label>
-            <label for="button-slide-2"></label>
-            <label for="button-slide-3"></label>
-          </div>
-        </div>
-      </section>
-      <section class="special-offer">
-        <article class="offer-item">
-          <h2>Малинки даром!</h2>
-          <p>При покупке 2кг любого фруктового мороженого, добавим в ваш заказ банку малинового варенья бесплатно.</p>
-          <a href="#" class="offer-button">Хочу варенье!</a>
-        </article>
-        <article class="offer-item">
-          <h2>Шоколадки даром!</h2>
-          <p>При покупке 2кг пломбира, добавим в ваш заказ упаковку вкуснейшей шоколадной присыпки совершенно
-            бесплатно.</p>
-          <a href="#" class="offer-button">Хочу шоколадки!</a>
-        </article>
-      </section>
-      <section class="container-prices">
-        <div class="price-card">
-          <img src="" alt="" class="price-img">
-          <p class="price">310&#8381;/кг</p>
-          <p class="card-description">Сливочное с апельсиновым джемом и цитрусовой стружкой</p>
-          <a href="#" class="show-button">Быстрый просмотр</a>
-        </div>
-        <div class="price-card">
-          <img src="" alt="" class="price-img">
-          <p class="price">380&#8381;/кг</p>
-          <p class="card-description">Сливочно-кофейное с кусочками шоколада</p>
-          <a href="#" class="show-button">Быстрый просмотр</a>
-        </div>
-        <div class="price-card">
-          <img src="" alt="" class="price-img">
-          <p class="price">355&#8381;/кг</p>
-          <p class="card-description">Сливочно-клубничное с присыпкой из белого шоколада</p>
-          <a href="#" class="show-button">Быстрый просмотр</a>
-        </div>
-        <div class="price-card">
-          <img src="" alt="" class="price-img">
-          <p class="price">415&#8381;/кг</p>
-          <p class="card-description">Сливочное крем-брюле с карамельной подливкой</p>
-          <a href="#" class="show-button">Быстрый просмотр</a>
-        </div>
-      </section>
-      <section class="shop-description">
-        <article>
-          <h3>Maгазин Глэйси &mdash; это онлайн- и офлайн-магазин по продаже мороженного собственного производства на
-            развес</h3>
-          <div class="description-container">
-            <div class="description-item">
-              <i class="item-icon"></i>
-              <p>Все наше мороженое изготавливается на собственном производстве, с использованием современного
-                оборудования и проверенных временем технологий.</p>
-            </div>
-            <div class="description-item">
-              <i class="item-icon"></i>
-              <p>Для приготовления мороженого используются настоящие сливки и молоко высочайшего качества. Все
-                дополнительные ингредиенты и добавки произведены из натурального, экологически чистого сырья.</p>
-            </div>
-            <div class="description-item">
-              <i class="item-icon"></i>
-              <p>Закупка ингредиентов производится только у проверенных фермерских хозяйств и компаний, с которыми нас
-                связывает долговременное сотрудничество.</p>
-            </div>
-            <div class="description-item">
-              <i class="item-icon"></i>
-              <p>Доставка нашего мороженого до заказчиков осуществляется в специальном термопаке, который не дает
-                мороженому растаять в пути и позволяет ему сохранить свой превосходный вкус.</p>
+    <div class="center-container">
+      <header>
+        <nav>
+          <ul>
+            <li>
+              <a href="#"><img src="" alt="Gllacy shop logo"></a>
+            </li>
+            <li>
+              <a href="#">Каталог</a>
+            </li>
+            <li>
+              <a href="#">Доставка и оплата</a>
+            </li>
+            <li>
+              <a href="#">О Компании</a>
+            </li>
+          </ul>
+        </nav>
+        <div class="header-buttons">
+          <div class="button-search">
+            <a href="#" class="search-icon">Поиск</a>
+            <div class="popup">
+              <input type="search" name="q" id="site-search" placeholder="Что ищем?">
             </div>
           </div>
-        </article>
-      </section>
-      <section class="news-container">
-        <article class="news-post">
-          <h4>Новое в нашем блоге</h4>
-          <a>10 способов сервировки фруктовых щербетов к столу</a>
-        </article>
-        <div class="news-letter">
-          <p>Подпишитесь на нашу сладкую рассылку и будете всегда в курсе всего самого вкусного, что у нас происходит.
-            Обещаем не спамить и не слать всякой не нужной ерунды. Честно =)</p>
-          <form action="" method="" id="news-letter">
-            <input type="email" name="letter-email" id="letter-email" placeholder="Электронная почта">
-            <button type="submit" class="submit-button">Отправить</button>
+          <div class="button-enter">
+            <a href="#" class="enter-icon">Вход</a>
+            <div class="popup">
+              <form action="" method="" id="sign-in">
+                <input type="email" id="user-login" name="login" placeholder="Электронная почта">
+                <input type="password" id="user-password" name="password" placeholder="Пароль">
+              </form>
+            </div>
+            <div class="button-cart">
+              <a href="#" class="basket">Пусто</a>
+            </div>
+          </div>
+      </header>
+      <main>
+        <section>
+          <div class="work-info">
+            <div class="work-time">
+              <p class="schedule">с 10 до 20, ежедневно</p>
+            </div>
+            <div class="phone">
+              <a href="tel:88124502525" class="phone-link">8 812 450-25-25</a>
+            </div>
+          </div>
+          <div class="slider-container">
+            <div class="slide" id="slide-1">
+              <p class="slide-text">Крем-брюле и пломбир c малиновым джемом</p>
+              <a href="#" class="slide-button">Давайте две!</a>
+            </div>
+            <div class="slide" id="slide-2">
+              <p class="slide-text">Крем-брюле и пломбир c малиновым джемом</p>
+              <a href="#" class="slide-button">Давайте две!</a>
+            </div>
+            <div class="slide" id="slide-3">
+              <p class="slide-text">Крем-брюле и пломбир c малиновым джемом</p>
+              <a href="#" class="slide-button">Давайте две!</a>
+            </div>
+            <div class="slider-buttons">
+              <label for="button-slide-1"></label>
+              <label for="button-slide-2"></label>
+              <label for="button-slide-3"></label>
+            </div>
+          </div>
+        </section>
+        <section class="special-offer">
+          <article class="offer-item">
+            <h2>Малинки даром!</h2>
+            <p>При покупке 2кг любого фруктового мороженого, добавим в ваш заказ банку малинового варенья бесплатно.</p>
+            <a href="#" class="offer-button">Хочу варенье!</a>
+          </article>
+          <article class="offer-item">
+            <h2>Шоколадки даром!</h2>
+            <p>При покупке 2кг пломбира, добавим в ваш заказ упаковку вкуснейшей шоколадной присыпки совершенно
+              бесплатно.</p>
+            <a href="#" class="offer-button">Хочу шоколадки!</a>
+          </article>
+        </section>
+        <section class="container-prices">
+          <div class="price-card">
+            <img src="" alt="" class="price-img">
+            <p class="price">310&#8381;/кг</p>
+            <p class="card-description">Сливочное с апельсиновым джемом и цитрусовой стружкой</p>
+            <a href="#" class="show-button">Быстрый просмотр</a>
+          </div>
+          <div class="price-card">
+            <img src="" alt="" class="price-img">
+            <p class="price">380&#8381;/кг</p>
+            <p class="card-description">Сливочно-кофейное с кусочками шоколада</p>
+            <a href="#" class="show-button">Быстрый просмотр</a>
+          </div>
+          <div class="price-card">
+            <img src="" alt="" class="price-img">
+            <p class="price">355&#8381;/кг</p>
+            <p class="card-description">Сливочно-клубничное с присыпкой из белого шоколада</p>
+            <a href="#" class="show-button">Быстрый просмотр</a>
+          </div>
+          <div class="price-card">
+            <img src="" alt="" class="price-img">
+            <p class="price">415&#8381;/кг</p>
+            <p class="card-description">Сливочное крем-брюле с карамельной подливкой</p>
+            <a href="#" class="show-button">Быстрый просмотр</a>
+          </div>
+        </section>
+        <section class="shop-description">
+          <article>
+            <h3>Maгазин Глэйси &mdash; это онлайн- и офлайн-магазин по продаже мороженного собственного производства на
+              развес</h3>
+            <div class="description-container">
+              <div class="description-item">
+                <i class="item-icon"></i>
+                <p>Все наше мороженое изготавливается на собственном производстве, с использованием современного
+                  оборудования и проверенных временем технологий.</p>
+              </div>
+              <div class="description-item">
+                <i class="item-icon"></i>
+                <p>Для приготовления мороженого используются настоящие сливки и молоко высочайшего качества. Все
+                  дополнительные ингредиенты и добавки произведены из натурального, экологически чистого сырья.</p>
+              </div>
+              <div class="description-item">
+                <i class="item-icon"></i>
+                <p>Закупка ингредиентов производится только у проверенных фермерских хозяйств и компаний, с которыми
+                  нас
+                  связывает долговременное сотрудничество.</p>
+              </div>
+              <div class="description-item">
+                <i class="item-icon"></i>
+                <p>Доставка нашего мороженого до заказчиков осуществляется в специальном термопаке, который не дает
+                  мороженому растаять в пути и позволяет ему сохранить свой превосходный вкус.</p>
+              </div>
+            </div>
+          </article>
+        </section>
+        <section class="news-container">
+          <article class="news-post">
+            <h4>Новое в нашем блоге</h4>
+            <a>10 способов сервировки фруктовых щербетов к столу</a>
+          </article>
+          <div class="news-letter">
+            <p>Подпишитесь на нашу сладкую рассылку и будете всегда в курсе всего самого вкусного, что у нас
+              происходит.
+              Обещаем не спамить и не слать всякой не нужной ерунды. Честно =)</p>
+            <form action="" method="" id="news-letter">
+              <input type="email" name="letter-email" id="letter-email" placeholder="Электронная почта">
+              <button type="submit" class="submit-button">Отправить</button>
+          </div>
+        </section>
+      </main>
+    </div>
+    <section class="map">
+      <div class="map-container"></div>
+    </section>
+    <div class="center-container">
+      <footer>
+        <div class="social">
+          <a href="#" class="twitter">Твиттер</a>
+          <a href="#" class="instagram">Инстаграм</a>
+          <a href="#" class="facebook">Фейсбук</a>
+          <a href="#" class="vkontakt">Вконтакте</a>
         </div>
-      </section>
-      <div class="map-container">
-      </div>
-    </main>
-    <footer>
-      <div class="social">
-        <a href="#" class="twitter">Твиттер</a>
-        <a href="#" class="instagram">Инстаграм</a>
-        <a href="#" class="facebook">Фейсбук</a>
-        <a href="#" class="vkontakt">Вконтакте</a>
-      </div>
-      <nav class="footer-nav">
-        <ul>
-          <li>
-            <a href="#" class="active">Для поставщиков</a>
-          </li>
-          <li>
-            <a href="#" class="active">О производстве</a>
-          </li>
-          <li>
-            <a href="#" class="active">Наши документы</a>
-          </li>
-          <li>
-            <a href="#" class="active">Экологические стандарты</a>
-          </li>
-        </ul>
-      </nav>
-      <div class="copyright">
-        <img src="" alt="html academy" class="html-logo">
-        <span>Сделано в <a rel="license" href="https://htmlacademy.ru/docs/license">HTML Academy</a> &copy; 2017</span>
-      </div>
-    </footer>
+        <nav class="footer-nav">
+          <ul>
+            <li>
+              <a href="#" class="active">Для поставщиков</a>
+            </li>
+            <li>
+              <a href="#" class="active">О производстве</a>
+            </li>
+            <li>
+              <a href="#" class="active">Наши документы</a>
+            </li>
+            <li>
+              <a href="#" class="active">Экологические стандарты</a>
+            </li>
+          </ul>
+        </nav>
+        <div class="copyright">
+          <img src="" alt="html academy" class="html-logo">
+          <span>Сделано в <a rel="license" href="https://htmlacademy.ru/docs/license">HTML Academy</a> &copy; 2017</span>
+        </div>
+      </footer>
+    </div>
   </div>
 </body>
 
