fix: Add image containers for image with price
Fixes #1

--- a/index.html
+++ b/index.html
@@ -93,26 +93,34 @@
         </section>
         <section class="container-prices">
           <div class="price-card">
-            <img src="" alt="" class="price-img">
-            <p class="price">310&#8381;/кг</p>
+            <div class="img-container">
+              <img src="" alt="" class="price-img">
+              <p class="price">310&#8381;/кг</p>
+            </div>
             <p class="card-description">Сливочное с апельсиновым джемом и цитрусовой стружкой</p>
             <a href="#" class="show-button">Быстрый просмотр</a>
           </div>
           <div class="price-card">
-            <img src="" alt="" class="price-img">
-            <p class="price">380&#8381;/кг</p>
+            <div class="img-container">
+              <img src="" alt="" class="price-img">
+              <p class="price">380&#8381;/кг</p>
+            </div>
             <p class="card-description">Сливочно-кофейное с кусочками шоколада</p>
             <a href="#" class="show-button">Быстрый просмотр</a>
           </div>
           <div class="price-card">
-            <img src="" alt="" class="price-img">
-            <p class="price">355&#8381;/кг</p>
+            <div class="img-container">
+              <img src="" alt="" class="price-img">
+              <p class="price">355&#8381;/кг</p>
+            </div>
             <p class="card-description">Сливочно-клубничное с присыпкой из белого шоколада</p>
             <a href="#" class="show-button">Быстрый просмотр</a>
           </div>
           <div class="price-card">
-            <img src="" alt="" class="price-img">
-            <p class="price">415&#8381;/кг</p>
+            <div class="img-container">
+              <img src="" alt="" class="price-img">
+              <p class="price">415&#8381;/кг</p>
+            </div>
             <p class="card-description">Сливочное крем-брюле с карамельной подливкой</p>
             <a href="#" class="show-button">Быстрый просмотр</a>
           </div>
