--- a/index.html
+++ b/index.html
@@ -61,15 +61,15 @@
           <div class="slider-container">
             <div class="slide" id="slide-1">
               <p class="slide-text">Крем-брюле и пломбир c малиновым джемом</p>
-              <a href="#" class="slide-button">Давайте две!</a>
+              <a href="#" class="btn btn_big">Давайте две!</a>
             </div>
             <div class="slide" id="slide-2">
               <p class="slide-text">Крем-брюле и пломбир c малиновым джемом</p>
-              <a href="#" class="slide-button">Давайте две!</a>
+              <a href="#" class="btn btn_big">Давайте две!</a>
             </div>
             <div class="slide" id="slide-3">
               <p class="slide-text">Крем-брюле и пломбир c малиновым джемом</p>
-              <a href="#" class="slide-button">Давайте две!</a>
+              <a href="#" class="btn btn_big">Давайте две!</a>
             </div>
             <div class="slider-buttons">
               <label for="button-slide-1"></label>
@@ -82,13 +82,13 @@
           <article class="offer-item">
             <h2>Малинки даром!</h2>
             <p>При покупке 2кг любого фруктового мороженого, добавим в ваш заказ банку малинового варенья бесплатно.</p>
-            <a href="#" class="offer-button">Хочу варенье!</a>
+            <a href="#" class="btn">Хочу варенье!</a>
           </article>
           <article class="offer-item">
             <h2>Шоколадки даром!</h2>
             <p>При покупке 2кг пломбира, добавим в ваш заказ упаковку вкуснейшей шоколадной присыпки совершенно
               бесплатно.</p>
-            <a href="#" class="offer-button">Хочу шоколадки!</a>
+            <a href="#" class="btn">Хочу шоколадки!</a>
           </article>
         </section>
         <section class="container-prices">
@@ -161,7 +161,7 @@
               Обещаем не спамить и не слать всякой не нужной ерунды. Честно =)</p>
             <form action="" method="" id="news-letter">
               <input type="email" name="letter-email" id="letter-email" placeholder="Электронная почта">
-              <button type="submit" class="submit-button">Отправить</button>
+              <button type="submit" class="btn">Отправить</button>
           </div>
         </section>
       </main>
