--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
           <a href="#" class="facebook">Фейсбук</a>
           <a href="#" class="vkontakt">Вконтакте</a>
         </div>
-        <nav class="footer-nav">
+        <div class="footer-nav">
           <ul>
             <li>
               <a href="#" class="active">Для поставщиков</a>
@@ -192,7 +192,7 @@
               <a href="#" class="active">Экологические стандарты</a>
             </li>
           </ul>
-        </nav>
+        </div>
         <div class="copyright">
           <img src="" alt="html academy" class="html-logo">
           <span>Сделано в <a rel="license" href="https://htmlacademy.ru/docs/license">HTML Academy</a> &copy; 2017</span>
