--- a/index.html
+++ b/index.html
@@ -1,8 +1,13 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="ru">
 
 <head>
+  <meta charset="utf-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <title>Gllacy Shop | Глейси - магазин мороженого</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" type="text/css" media="screen" href="main.css" />
+  <script src="main.js"></script>
 </head>
 
 <body>
