fix: Rename class for centering container
Fixes #1

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <input class="button-slide" id="button-slide-2" type="radio" name="button-slide">
   <input class="button-slide" id="button-slide-3" type="radio" name="button-slide">
   <div class="page-container">
-    <div class="center-container">
+    <div class="container">
       <header>
         <nav>
           <ul>
@@ -169,7 +169,7 @@
     <section class="map">
       <div class="map-container"></div>
     </section>
-    <div class="center-container">
+    <div class="container">
       <footer>
         <div class="social">
           <a href="#" class="twitter">Твиттер</a>
