fix: Add class for navigation
Fixes #1

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <div class="page-container">
     <div class="container">
       <header>
-        <nav>
+        <nav class="nav">
           <ul>
             <li>
               <a href="#"><img src="" alt="Gllacy shop logo"></a>
