fix: Replace div which contains input to form
Fixes #1

--- a/index.html
+++ b/index.html
@@ -31,9 +31,9 @@
         <div class="header-buttons">
           <div class="button-search">
             <a href="#" class="search-icon">Поиск</a>
-            <div class="popup">
+            <form class="popup" action="" method="" id="search">
               <input type="search" name="q" id="site-search" placeholder="Что ищем?">
-            </div>
+            </form>
           </div>
           <div class="button-enter">
             <a href="#" class="enter-icon">Вход</a>
