--- a/index.html
+++ b/index.html
@@ -130,23 +130,15 @@
             <h3>Maгазин Глэйси &mdash; это онлайн- и офлайн-магазин по продаже мороженного собственного производства на
               развес</h3>
             <div class="description-container">
-              <div class="description-item">
-                <p>Все наше мороженое изготавливается на собственном производстве, с использованием современного
-                  оборудования и проверенных временем технологий.</p>
-              </div>
-              <div class="description-item">
-                <p>Для приготовления мороженого используются настоящие сливки и молоко высочайшего качества. Все
-                  дополнительные ингредиенты и добавки произведены из натурального, экологически чистого сырья.</p>
-              </div>
-              <div class="description-item">
-                <p>Закупка ингредиентов производится только у проверенных фермерских хозяйств и компаний, с которыми
-                  нас
-                  связывает долговременное сотрудничество.</p>
-              </div>
-              <div class="description-item">
-                <p>Доставка нашего мороженого до заказчиков осуществляется в специальном термопаке, который не дает
-                  мороженому растаять в пути и позволяет ему сохранить свой превосходный вкус.</p>
-              </div>
+              <p class="description-item">Все наше мороженое изготавливается на собственном производстве, с
+                использованием современного оборудования и проверенных временем технологий.</p>
+              <p class="description-item">Для приготовления мороженого используются настоящие сливки и молоко
+                высочайшего качества. Все дополнительные ингредиенты и добавки произведены из натурального,
+                экологически чистого сырья.</p>
+              <p class="description-item">Закупка ингредиентов производится только у проверенных фермерских хозяйств и
+                компаний, с которыми нас связывает долговременное сотрудничество.</p>
+              <p class="description-item">Доставка нашего мороженого до заказчиков осуществляется в специальном
+                термопаке, который не дает мороженому растаять в пути и позволяет ему сохранить свой превосходный вкус.</p>
             </div>
           </article>
         </section>
