fix: Wrap logo in a tag
Fixes #1

--- a/index.html
+++ b/index.html
@@ -186,7 +186,9 @@
           </ul>
         </div>
         <div class="copyright">
-          <img src="" alt="html academy" class="html-logo">
+          <a href="https://htmlacademy.ru/">
+            <img class="html-logo" src="" alt="Html academy logo">
+          </a>
           <span>Сделано в <a rel="license" href="https://htmlacademy.ru/docs/license">HTML Academy</a> &copy; 2017</span>
         </div>
       </div>
