Add pagination section
Fixes #1

--- a/catalog.html
+++ b/catalog.html
@@ -224,6 +224,15 @@
           <a href="#" class="show-button">Быстрый просмотр</a>
         </div>
       </section>
+      <section class="pagination">
+        <a class="disabled" href="#">&lt;</a>
+        <a class="active" href="#">1</a>
+        <a href="#">2</a>
+        <a href="#">3</a>
+        <a href="#">4</a>
+        <a href="#">5</a>
+        <a href="#">&gt;</a>
+      </section>
     </main>
     <footer>
 
